Add chicken pie page and make recipes into unordered list

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/lasagna.html">Lasagna</a>
+    <ul>
+      <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="../odin-recipes/recipes/chickenpotpie.html">Chicken Pot Pie</a></li>
+    
+    </ul>
   
   </body>
 
