Add the chef image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <img src="../odin-recipes/img/chef.jpg" alt="The Chef">
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna</a></li>
